[package]
name = "md-export"
version = "0.1.0"
edition = "2021"
description = "Convert GitHub-flavored Markdown into a self-contained, styled HTML file (embedded CSS, no external assets)"
license = "MIT"
authors = ["smolkai <smolkai@users.noreply.github.com>"]
repository = ""

[[bin]]
name = "md-export"
path = "src/main.rs"

[lib]
name = "md_export"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
comrak = "0.52"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
